--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<link rel="icon" href="/favicon.ico">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="LifeCrumbs | Made by Jade ❤️" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="LifeCrumbs | Made by Jade ❤️" />
     <title>LifeCrumbs</title>
-	%svelte.head%
-</head>
-<body>
-	%svelte.body%
-</body>
+    %svelte.head%
+  </head>
+  <body>
+    %svelte.body%
+  </body>
 </html>
